halfway through button changes on staff page

--- a/app/views/shared/_chat.html.erb
+++ b/app/views/shared/_chat.html.erb
@@ -25,6 +25,7 @@
         <%= form.input :content, as: :string,
                                   wrapper: false,
                                   label: false,
+                                  placeholder: 'Write your message here',
                                   input_html: {
                                     class: 'chat-input'                                  
                                   } %>
